@@ -4,6 +4,7 @@ Changes
 Next
 ----
 - Always show property width and precision in schema (#123).
+- Write datetime properties of features (#125).
 
 1.1.6 (2014-07-23)
 ------------------
